// Copyright 2020 The Pigweed Authors
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.
syntax = "proto3";

import "pw_protobuf_protos/common.proto";

package rpc_example;

message DeviceUuid {
  bytes uuid = 1;
}

service DeviceInfo {
  rpc SetUuid(DeviceUuid) returns (pw.protobuf.Empty) {}
  rpc GetUuid(pw.protobuf.Empty) returns (DeviceUuid) {}
}

// ------------------------------------------
// Try creating a service with the following RPCs:
//
//   Turn the LED on.
//   Turn the LED off.
//   Start blinking the LED.
//   Change the LED blink speed.
//   Return the number of times the LED has blinked.
//
// service LedService { ... }
